--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -36,6 +36,7 @@
       position: relative;
       font-size: 42px;
       font-family: $second-font;
+      margin-bottom: 60px;
       &::before {
         content: "";
         position: absolute;
@@ -57,14 +58,13 @@
       }
     }
     &-items {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-auto-flow: dense;
       gap: 25px;
     }
     &-item {
       padding: 15px 35px;
-      width: 25%;
       text-align: center;
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
       svg {
@@ -227,7 +227,6 @@
       display: flex;
       width: 100%;
 
-      // justify-content: space-between;
       align-items: center;
       width: 80%;
       margin: 0 auto 50px;
@@ -283,6 +282,15 @@
         left: 4%;
       }
     }
+    &__testimonials {
+      &-title {
+        font-size: 36px;
+      }
+      width: 95%;
+      .testimonials__item-desc {
+        font-size: 14px;
+      }
+    }
   }
 }
 
@@ -298,12 +306,42 @@
         font-size: 14px;
       }
     }
-
     &__course {
       width: 90%;
       height: 40vh;
       &-img {
         height: 33vh;
+      }
+    }
+    &__advantages {
+      &-title {
+        font-size: 28px;
+        &::before {
+          width: 15px;
+          height: 15px;
+          bottom: -17px;
+        }
+      }
+    }
+    &__testimonials {
+      &-inner {
+        width: 85vw;
+      }
+      &-title {
+        font-size: 28px;
+        margin-bottom: 35px;
+        &::before {
+          width: 15px;
+          height: 15px;
+          bottom: -17px;
+        }
+      }
+
+      .testimonials__item {
+        width: 95%;
+        &-desc {
+          font-size: 14px;
+        }
       }
     }
   }
@@ -322,6 +360,33 @@
       }
       &-desc {
         font-size: 12px;
+      }
+    }
+    &__advantages {
+      &-items {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      }
+      &-item {
+        padding: 15px;
+      }
+      .advantages__item {
+        &-title {
+          font-size: 16px;
+        }
+        &-desc {
+          font-size: 14px;
+        }
+      }
+    }
+    &__testimonials {
+      &-title {
+        font-size: 22px;
+      }
+      .testimonials__item {
+        display: block;
+        &-img {
+          width: 40vw;
+        }
       }
     }
   }
