--- a/src/styles/pages/_error.scss
+++ b/src/styles/pages/_error.scss
@@ -7,6 +7,26 @@
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  &__title {
+    font-size: 162px;
+    margin-top: -65px;
+    margin-bottom: 0;
+    color: $main-black-2;
+    letter-spacing: 20px;
+  }
+  &__info {
+    font-size: 24px;
+    margin: 0 0 10px 0;
+    // color: $main-black-2;
+    letter-spacing: 1.5px;
+  }
+  &__back {
+    font-size: 14px !important;
+    padding: 17px 0 !important;
+    left: 33px !important;
+    top: 10px !important;
+  }
 }
