--- a/src/styles/pages/_error.scss
+++ b/src/styles/pages/_error.scss
@@ -24,9 +24,59 @@
     letter-spacing: 1.5px;
   }
   &__back {
-    font-size: 14px !important;
-    padding: 17px 0 !important;
-    left: 33px !important;
-    top: 10px !important;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 35px;
+    width: 250px;
+    height: 50px;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: none;
+    a {
+      position: absolute;
+      top: 0;
+      // left: 0;
+      width: 100%;
+      font-size: 18px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(255, 255, 255, 0.2);
+      box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 30px;
+      padding: 17px;
+      letter-spacing: 1px;
+      text-decoration: none;
+      overflow: hidden;
+      color: #fff;
+      font-weight: 400px;
+      z-index: 1;
+      transition: 0.5s;
+      backdrop-filter: blur(55px);
+      &:hover {
+        letter-spacing: 3px;
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 50%;
+        height: 100%;
+        background: linear-gradient(to left, rgba(255, 255, 255, 0.3), transparent);
+        transform: skewX(45deg) translate(0);
+        transition: 0.5s;
+        filter: blur(0px);
+      }
+    }
+    &:hover a::before {
+      transform: skewX(45deg) translate(200px);
+    }
   }
 }
